# python-docs-with-mkdocs

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
calculator/: calculations.py
docs/: index.md
explanation/: index.html
how-to-guides/: index.html
reference/: index.html
search/: search_index.json
tutorials/: index.html
